# Mandarin_Pronunciation_Recognition_Project

./: .gitignore  LICENSE  README.md  common_voice.py  get_dataset.py  get_info.py  get_pitch.py  get_sentences.py  ml.ipynb  pyproject.toml  requirements.txt  tf_dataset.py  tones.py
data/example/pg_dataset/: assessment.csv  tones_with_label.xls
doc/: paper.tex
kamils_exploration/: DataExploration.ipynb  Recording.m4a  RecordingsExploration.ipynb  TimeSeriesAnalysis.ipynb  Wav2vecModelTrial.ipynb  getStageIDataset.py  transformOggToWav.py  w2vLearning.ipynb  wav2vecPronTon.py
kamils_exploration/logs/: events.out.tfevents.1749744102.KamilPC.23472.0  events.out.tfevents.1749744129.KamilPC.23472.1  events.out.tfevents.1749744236.KamilPC.23472.2
res/: ContextCNN.pth  ContextFusionCNN.pth  ContextGuesser.pth  README.md
src/: ContextFusionCNN.pth  ExtractF0.praat  audio.py  ctc_perf_test.py  dataset.py  demo.ipynb  develop.py  get_dataset.py  get_info.py  get_pitch.py  hypothesis.ipynb  main.ipynb  ml.ipynb  ml_hugging.ipynb  ml_hugging.py  ml_torch.ipynb  path.py  praat.ipynb  pytorch_dataloader.py  silence_cleaning.ipynb  stageI_tf_dataset.ipynb  stageI_tf_dataset_SimpleCNN_v1_1.ipynb  stageI_tf_dataset_SimpleCNN_v1_2.ipynb  stageI_tf_dataset_test&val.ipynb  tf_dataset.py  transformation.py  type_helpers.py  wandb_config.py
src/data/: README.md  common_voice.py  pg_experiment.py  transform_ogg_to_wav.py
src/models/: ComplexLightweightCNN.py  FusionCNN.py  Guesser.py  SimpleCNN.py  SimpleCNN_v1_1.py  SimpleCNN_v1_2.py  SimpleCNN_v2.py  SimplifiedLightweightCNN.py
(+3 files in other folders)
