[project]
name = "mandarin-pronunciation-recognition-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.0",
    "dotenv>=0.9.9",
    "fastexcel>=0.16.0",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "nbformat>=5.10.4",
    "polars>=1.35.1",
    "seaborn>=0.13.2",
    "silero-vad>=6.0.0",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
